--- a/keywords.html
+++ b/keywords.html
@@ -4438,6 +4438,7 @@
     ]
 };
     var docs = {};
+    var aliases = {};
     </script>
     <style>
     body {
@@ -4497,13 +4498,26 @@
         const row = table.insertRow();
         const cell = row.insertCell();
 
+        var url = null; 
+        
+        // direct link to docs
         if (docs.hasOwnProperty(feature)) {
-            const link = document.createElement('a');
-            link.href = docs[feature];
-            link.textContent = feature;
-            cell.appendChild(link);
+            url = document.createElement('a');
         } else {
-            cell.textContent = feature;
+            if (aliases.hasOwnProperty(feature)) {
+               // no direct link to docs, check if there is an alias
+                url = docs[aliases[feature]];
+            }
+        }
+
+        if (url) {
+            cell.innerHTML = `<a href="${url}">${feature}</a>`;
+        } else {
+            cell.innerHTML = feature;
+        }
+
+        if (aliases.hasOwnProperty(feature)) {
+            cell.innerHTML += "*";
         }
 
         for (const version of versions) {
@@ -4542,4 +4556,4 @@
         cell.removeChild(cell.lastChild);
     }
 
-    </script></div></div><div style='margin-top: 5px'><footer><p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a></p></footer></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
+    </script><p style="margin-top: 15px">* indicates an alias to another function</p></div></div><div style='margin-top: 5px'><footer><p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a></p></footer></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
