--- a/keywords.html
+++ b/keywords.html
@@ -5571,12 +5571,13 @@
 
     .main{
         margin-top: 20px;
+
     }
     </style>
 
 </head>
 <body>
-<div class="container" style="max-width: none">
+<div class="container" style="max-width: none; margin-left: 10px; margin-right: 10px;">
 <h1>ClickHouse Keyword Reference</h1>
 <nav>[ <a href="index.html">Function Reference</a> | <a href="keywords.html">Keyword Reference</a> ]</nav>
 <div class="main">
@@ -5680,4 +5681,4 @@
         cell.removeChild(cell.lastChild);
     }
 
-    </script><p style="margin-top: 15px">* indicates an alias to another function</p></div></div><div style='margin-top: 5px'><footer><p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a></p></footer></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
+    </script><p style="margin-top: 15px">* indicates an alias to another function</p></div></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><div style='padding: 5px; margin-top: 5px'><footer><p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-20 22:52</p></footer></div></body>
