--- a/keywords.html
+++ b/keywords.html
@@ -1,7 +1,8 @@
 <!doctype html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClickHouse Keyword Reference</title>    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Google tag (gtag.js) -->
@@ -10,7 +11,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-W7W1TNNL21');
     </script>
     <script>
@@ -4887,8 +4887,7 @@
     ],
     "TAG": [
         "head",
-        "latest",
-        "24.8"
+        "latest"
     ],
     "TAGS": [
         "head",
@@ -5568,23 +5567,44 @@
     body {
         font-size: 13px;
     }
-
-    .main{
+    .main {
         margin-top: 20px;
-
+    }
+    #feature_table {
+        width: 100%;
+        overflow-x: auto;
+        display: block;
+    }
+    #feature_table th, #feature_table td {
+        white-space: nowrap;
+        padding: 5px;
+    }
+    .tooltip {
+        position: absolute;
+        background-color: black;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        z-index: 1000;
     }
     </style>
-
 </head>
 <body>
-<div class="container" style="max-width: none; margin-left: 10px; margin-right: 10px;">
-<h1>ClickHouse Keyword Reference</h1>
-<nav>[ <a href="index.html">Function Reference</a> | <a href="keywords.html">Keyword Reference</a> ]</nav>
-<div class="main">
-
-    <input type="text" id="search" onkeyup="search()" placeholder="Search for keywords...">
-    
-    <script>
+<div class="container-fluid">
+    <h1>ClickHouse Keyword Reference</h1>
+    <nav>[ <a href="index.html">Function Reference</a> | <a href="keywords.html">Keyword Reference</a> ]</nav>
+    <div class="main">
+        <input type="text" id="search" class="form-control mb-3" onkeyup="search()" placeholder="Search for keywords...">
+        <div class="table-responsive">
+            <table id="feature_table" class="table table-bordered table-sm"></table>
+        </div>
+        <p class="mt-3">* indicates an alias to another function</p>
+    </div>
+    <footer class="mt-3">
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-21 22:18</p>
+    </footer>
+</div>
+<script>
     function search() {
         const input = document.getElementById('search').value.toUpperCase();
         const table = document.getElementById('feature_table');
@@ -5605,8 +5625,7 @@
             }
         }
     }
-    </script>
-    <table id='feature_table'></table><script>
+
     const table = document.getElementById('feature_table');
     const features = Object.keys(availability);
     const versions = [...new Set(Object.values(availability).flat())];
@@ -5680,5 +5699,7 @@
     function hideTooltip(cell) {
         cell.removeChild(cell.lastChild);
     }
-
-    </script><p style="margin-top: 15px">* indicates an alias to another function</p></div></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><div style='padding: 5px; margin-top: 5px'><footer><p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-20 22:52</p></footer></div></body>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
