fix broken docs links

--- a/index.html
+++ b/index.html
@@ -52506,6 +52506,8 @@
     "DATE_TRUNC": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#date_trunc",
     "FQDN": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#fqdn",
     "HOP": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#hop",
+    "HOP_END": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#hopend",
+    "HOP_START": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#hopstart",
     "IPv6StringToNum": "https://clickhouse.com/docs/en/sql-reference/functions/ip-address-functions/#ipv6stringtonum",
     "JSONAllPaths": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#jsonallpaths",
     "JSONAllPathsWithTypes": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#jsonallpathswithtypes",
@@ -52529,6 +52531,7 @@
     "JSONSharedDataPaths": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#jsonshareddatapaths",
     "JSONSharedDataPathsWithTypes": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#jsonshareddatapathswithtypes",
     "JSONType": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#jsontype",
+    "JSON_ARRAY_LENGTH": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#jsonarraylength",
     "JSON_EXISTS": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#json_exists",
     "JSON_QUERY": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#json_query",
     "JSON_VALUE": "https://clickhouse.com/docs/en/sql-reference/functions/json-functions/#json_value",
@@ -52549,13 +52552,19 @@
     "MACNumToString": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#macnumtostring",
     "MACStringToNum": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#macstringtonum",
     "MACStringToOUI": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#macstringtooui",
+    "MAP_FROM_ARRAYS": "https://clickhouse.com/docs/en/sql-reference/functions/tuple-map-functions/#mapfromarrays",
     "MD4": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#md4",
     "MD5": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#md5",
+    "REGEXP_EXTRACT": "https://clickhouse.com/docs/en/sql-reference/functions/string-search-functions/#regexpextract",
+    "SUBSTRING_INDEX": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#substringindex",
     "SVG": "https://clickhouse.com/docs/en/sql-reference/functions/geo/svg/#svg",
     "TUMBLE": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#tumble",
+    "TUMBLE_END": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#tumbleend",
+    "TUMBLE_START": "https://clickhouse.com/docs/en/sql-reference/functions/time-window-functions/#tumblestart",
     "TimeDiff": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#timediff",
     "ULIDStringToDateTime": "https://clickhouse.com/docs/en/sql-reference/functions/ulid-functions/#ulidstringtodatetime",
     "UTCTimestamp": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#utctimestamp",
+    "UTC_timestamp": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#utctimestamp",
     "UUIDNumToString": "https://clickhouse.com/docs/en/sql-reference/functions/uuid-functions/#uuidnumtostring",
     "UUIDStringToNum": "https://clickhouse.com/docs/en/sql-reference/functions/uuid-functions/#uuidstringtonum",
     "UUIDToNum": "https://clickhouse.com/docs/en/sql-reference/functions/uuid-functions/#uuidtonum",
@@ -52564,6 +52573,7 @@
     "YYYYMMDDToDate32": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#yyyymmddtodate32",
     "YYYYMMDDhhmmssToDateTime": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#yyyymmddhhmmsstodatetime",
     "YYYYMMDDhhmmssToDateTime64": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#yyyymmddhhmmsstodatetime64",
+    "_CAST": "https://clickhouse.com/docs/en/sql-reference/functions/type-conversion-functions/#cast",
     "abs": "https://clickhouse.com/docs/en/sql-reference/functions/arithmetic-functions/#abs",
     "acos": "https://clickhouse.com/docs/en/sql-reference/functions/math-functions/#acos",
     "acosh": "https://clickhouse.com/docs/en/sql-reference/functions/math-functions/#acosh",
@@ -52707,6 +52717,7 @@
     "currentDatabase": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentdatabase",
     "currentProfiles": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentprofiles",
     "currentRoles": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentroles",
+    "current_database": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#currentdatabase",
     "cutFragment": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#cutfragment",
     "cutQueryString": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#cutquerystring",
     "cutQueryStringAndFragment": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#cutquerystringandfragment",
@@ -52832,6 +52843,7 @@
     "fromUnixTimestamp64Milli": "https://clickhouse.com/docs/en/sql-reference/functions/type-conversion-functions/#fromunixtimestamp64milli",
     "fromUnixTimestamp64Nano": "https://clickhouse.com/docs/en/sql-reference/functions/type-conversion-functions/#fromunixtimestamp64nano",
     "fromUnixTimestampInJodaSyntax": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#fromunixtimestampinjodasyntax",
+    "from_utc_timestamp": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#fromutctimestamp",
     "gccMurmurHash": "https://clickhouse.com/docs/en/sql-reference/functions/hash-functions/#gccmurmurhash",
     "gcd": "https://clickhouse.com/docs/en/sql-reference/functions/arithmetic-functions/#gcd",
     "generateRandomStructure": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#generaterandomstructure",
@@ -52932,6 +52944,7 @@
     "initcap": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#initcap",
     "initcapUTF8": "https://clickhouse.com/docs/en/sql-reference/functions/string-functions/#initcaputf8",
     "initialQueryID": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#initialqueryid",
+    "initial_query_id": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#initialqueryid",
     "initializeAggregation": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#initializeaggregation",
     "intDiv": "https://clickhouse.com/docs/en/sql-reference/functions/arithmetic-functions/#intdiv",
     "intDivOrZero": "https://clickhouse.com/docs/en/sql-reference/functions/arithmetic-functions/#intdivorzero",
@@ -53152,6 +53165,7 @@
     "queryID": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#queryid",
     "queryString": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#querystring",
     "queryStringAndFragment": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#querystringandfragment",
+    "query_id": "https://clickhouse.com/docs/en/sql-reference/functions/other-functions/#queryid",
     "radians": "https://clickhouse.com/docs/en/sql-reference/functions/math-functions/#radians",
     "rand": "https://clickhouse.com/docs/en/sql-reference/functions/random-functions/#rand",
     "rand64": "https://clickhouse.com/docs/en/sql-reference/functions/random-functions/#rand64",
@@ -53500,6 +53514,7 @@
     "toYYYYMMDDhhmmss": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#toyyyymmddhhmmss",
     "toYear": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#toyear",
     "toYearWeek": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#toyearweek",
+    "to_utc_timestamp": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#toutctimestamp",
     "today": "https://clickhouse.com/docs/en/sql-reference/functions/date-time-functions/#today",
     "tokens": "https://clickhouse.com/docs/en/sql-reference/functions/splitting-merging-functions/#tokens",
     "topLevelDomain": "https://clickhouse.com/docs/en/sql-reference/functions/url-functions/#topleveldomain",
@@ -53762,9 +53777,9 @@
         display: block;
     }
     #feature_table th, #feature_table td {
-        white-space: nowrap;
-        padding: 5px;
+        border: none;
     }
+
     .tooltip {
         position: absolute;
         background-color: black;
@@ -53780,6 +53795,16 @@
         font-size: 0.8rem;
         padding: 0.2rem 0.4rem;
     }
+    #feature_table th:not(:first-child),
+    #feature_table td:not(:first-child) {
+        width: 45px;
+        min-width: 45px;
+        max-width: 45px;
+    }
+    #feature_table th:first-child,
+    #feature_table td:first-child {
+        width: auto;
+    }
     </style>
 </head>
 <body>
@@ -53789,12 +53814,12 @@
     <div class="main">
         <input type="text" id="search" class="form-control mb-3" onkeyup="search()" placeholder="Search for functions...">
         <div class="table-responsive">
-            <table id="feature_table" class="table table-bordered table-sm"></table>
+            <table id="feature_table" class="table table-sm"></table>
         </div>
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-21 22:47</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-21 23:17</p>
     </footer>
 </div>
 <script>
@@ -53877,8 +53902,16 @@
         const cell = headerRow.insertCell();
         cell.textContent = version;
         cell.style.cursor = 'pointer';
-        cell.title = 'Click to hide this column';  // Add this line
+        cell.title = 'Click to hide this column';
         cell.onclick = () => toggleColumn(i + 1);  // +1 because the first column is for feature names
+        
+        // Add these lines to set width and text alignment
+        if (i > 0) {  // Skip the first column (function/keyword names)
+            cell.style.width = '40px';
+            cell.style.minWidth = '40px';
+            cell.style.maxWidth = '40px';
+            cell.style.textAlign = 'center';
+        }
     }
 
     for (const feature of features) {
@@ -53889,18 +53922,17 @@
         
         // direct link to docs
         if (docs.hasOwnProperty(feature)) {
-            url = document.createElement('a');
-        } else {
-            if (aliases.hasOwnProperty(feature)) {
-               // no direct link to docs, check if there is an alias
-                url = docs[aliases[feature]];
-            }
+            url = docs[feature];
+        } else if (aliases.hasOwnProperty(feature)) {
+            // no direct link to docs, check if there is an alias
+            url = docs[aliases[feature]];
         }
 
         if (url) {
             cell.innerHTML = `<a href="${url}">${feature}</a>`;
         } else {
             cell.innerHTML = feature;
+            console.log(`No URL found for feature ${feature}`);
         }
 
         if (aliases.hasOwnProperty(feature)) {
@@ -53916,6 +53948,7 @@
                 cell.textContent = '✗';
                 cell.style.backgroundColor = 'red';
             }
+            cell.style.textAlign = 'center';  // Center the checkmark/cross
             cell.onmouseover = () => showTooltip(cell, version, feature);
             cell.onmouseout = () => hideTooltip(cell);
         }
