--- a/keywords.html
+++ b/keywords.html
@@ -5576,9 +5576,9 @@
         display: block;
     }
     #feature_table th, #feature_table td {
-        white-space: nowrap;
-        padding: 5px;
+        border: none;
     }
+
     .tooltip {
         position: absolute;
         background-color: black;
@@ -5594,6 +5594,16 @@
         font-size: 0.8rem;
         padding: 0.2rem 0.4rem;
     }
+    #feature_table th:not(:first-child),
+    #feature_table td:not(:first-child) {
+        width: 45px;
+        min-width: 45px;
+        max-width: 45px;
+    }
+    #feature_table th:first-child,
+    #feature_table td:first-child {
+        width: auto;
+    }
     </style>
 </head>
 <body>
@@ -5603,12 +5613,12 @@
     <div class="main">
         <input type="text" id="search" class="form-control mb-3" onkeyup="search()" placeholder="Search for keywords...">
         <div class="table-responsive">
-            <table id="feature_table" class="table table-bordered table-sm"></table>
+            <table id="feature_table" class="table table-sm"></table>
         </div>
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-21 22:47</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-21 23:17</p>
     </footer>
 </div>
 <script>
@@ -5691,8 +5701,16 @@
         const cell = headerRow.insertCell();
         cell.textContent = version;
         cell.style.cursor = 'pointer';
-        cell.title = 'Click to hide this column';  // Add this line
+        cell.title = 'Click to hide this column';
         cell.onclick = () => toggleColumn(i + 1);  // +1 because the first column is for feature names
+        
+        // Add these lines to set width and text alignment
+        if (i > 0) {  // Skip the first column (function/keyword names)
+            cell.style.width = '40px';
+            cell.style.minWidth = '40px';
+            cell.style.maxWidth = '40px';
+            cell.style.textAlign = 'center';
+        }
     }
 
     for (const feature of features) {
@@ -5703,18 +5721,17 @@
         
         // direct link to docs
         if (docs.hasOwnProperty(feature)) {
-            url = document.createElement('a');
-        } else {
-            if (aliases.hasOwnProperty(feature)) {
-               // no direct link to docs, check if there is an alias
-                url = docs[aliases[feature]];
-            }
+            url = docs[feature];
+        } else if (aliases.hasOwnProperty(feature)) {
+            // no direct link to docs, check if there is an alias
+            url = docs[aliases[feature]];
         }
 
         if (url) {
             cell.innerHTML = `<a href="${url}">${feature}</a>`;
         } else {
             cell.innerHTML = feature;
+            console.log(`No URL found for feature ${feature}`);
         }
 
         if (aliases.hasOwnProperty(feature)) {
@@ -5730,6 +5747,7 @@
                 cell.textContent = '✗';
                 cell.style.backgroundColor = 'red';
             }
+            cell.style.textAlign = 'center';  // Center the checkmark/cross
             cell.onmouseover = () => showTooltip(cell, version, feature);
             cell.onmouseout = () => hideTooltip(cell);
         }
