--- a/keywords.html
+++ b/keywords.html
@@ -6171,7 +6171,7 @@
 <div class="container-fluid">
     <h1>ClickHouse Keyword Reference</h1>
     <nav>[ <a href="index.html">Function Reference</a> | <a href="keywords.html">Keyword Reference</a> | <a href="settings.html">Setting Reference</a>]</nav>
-    <div><p style="margin-top: 5px;">This tool provides information about function and keyword availability across a range of recent ClickHouse releases, sourced from the <code>system.functions</code> and <code>system.keywords</code> tables for each release.</p></div>
+    <div><p style="margin-top: 5px;">This tool provides information about function and keyword availability across a range of recent ClickHouse releases, sourced from the <code>system.functions</code>, <code>system.keywords</code>, and <code>system.functions</code> tables for each release.</p></div>
     <div class="main">
         <input type="text" id="search" class="form-control mb-3" onkeyup="search()" placeholder="Search for keywords...">
         <div class="table-responsive">
@@ -6180,7 +6180,7 @@
         <p class="mt-3">* indicates an alias to another function</p>
     </div>
     <footer class="mt-3">
-        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-27 18:42</p>
+        <p>Source on <a href='https://github.com/JosephRedfern/clickhouse-function-reference'>GitHub</a> | last updated 2024-09-29 15:17</p>
     </footer>
 </div>
 <script>
